3822B1FI1/2_integral_oneapi/shulpin_ilya/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/2_integral_oneapi/shulpin_ilya/integral_oneapi.cpp:15:28: error: no matching function for call to 'reduction'
   15 |             auto sum_red = sycl::reduction(result, sycl::plus<float>());
      |                            ^~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2853:6: note: candidate template ignored: could not match 'T *' against 'float'
 2853 | auto reduction(T *Var, BinaryOperation Combiner,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2896:6: note: candidate template ignored: could not match 'span<T, Extent>' against 'float'
 2896 | auto reduction(span<T, Extent> Span, BinaryOperation Combiner,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:133:6: note: candidate function template not viable: requires 3 arguments, but 2 were provided
  133 | auto reduction(T *var, BinaryOperation combiner, PropertyList properties)
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:143:6: note: candidate function template not viable: requires 3 arguments, but 2 were provided
  143 | auto reduction(span<T, Extent> vars, BinaryOperation combiner,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  144 |                PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2837:6: note: candidate function template not viable: requires at least 3 arguments, but 2 were provided
 2837 | auto reduction(buffer<T, 1, AllocatorT> Var, handler &CGH,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 2838 |                BinaryOperation Combiner, const property_list &PropList = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2880:6: note: candidate function template not viable: requires at least 3 arguments, but 2 were provided
 2880 | auto reduction(T *Var, const T &Identity, BinaryOperation Combiner,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 2881 |                const property_list &PropList = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2910:6: note: candidate function template not viable: requires at least 3 arguments, but 2 were provided
 2910 | auto reduction(span<T, Extent> Span, const T &Identity,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 2911 |                BinaryOperation Combiner, const property_list &PropList = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:122:6: note: candidate function template not viable: requires 4 arguments, but 2 were provided
  122 | auto reduction(BufferT vars, handler &cgh, BinaryOperation combiner,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  123 |                PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:164:6: note: candidate function template not viable: requires 4 arguments, but 2 were provided
  164 | auto reduction(T *var, const T &identity, BinaryOperation combiner,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  165 |                PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:175:6: note: candidate function template not viable: requires 4 arguments, but 2 were provided
  175 | auto reduction(span<T, Extent> vars, const T &identity,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  176 |                BinaryOperation combiner, PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2866:6: note: candidate function template not viable: requires at least 4 arguments, but 2 were provided
 2866 | auto reduction(buffer<T, 1, AllocatorT> Var, handler &CGH, const T &Identity,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 2867 |                BinaryOperation Combiner, const property_list &PropList = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:153:6: note: candidate function template not viable: requires 5 arguments, but 2 were provided
  153 | auto reduction(BufferT vars, handler &cgh,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |                const typename BufferT::value_type &identity,
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  155 |                BinaryOperation combiner, PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
